--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.0.5",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^1.3.2",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
